WindGroup Dev/src/objects/Serving__c.object
<CustomObject>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipName>Servicing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level</label>
        <referenceTo>Level__c</referenceTo>
        <relationshipName>Served_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Served_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Served_Start_Date__c</fullName>
        <label>Servicing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Servicing_End_Date__c</fullName>
        <label>Servicing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipName>Served_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Serving</label>
    <nameField>
        <displayFormat>{YYYYMM}-SN-{000000}</displayFormat>
        <label>Service No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Serving</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>